--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,7 +21,7 @@
                     
                     <h1 style="margin-bottom: 30px; margin-left: -40px;">Welcome back!</h1>
                     <div>
-                        <label for="email"> Email Address</label>
+                        <label for="email"> Unique Id</label>
                         <input name="email" id="email" autocomplete="off" type="email" placeholder="Email address">
                         <div class="password error"></div>
                     </div>
