--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,7 +13,7 @@
         <label for="name">Full name</label>
         <input type="text" name="name" required />
 
-        <label for="email">Email</label>
+        <label for="email">Unique Id</label>
         <input type="text" name="email" required />
         <div class="email error"></div>
 
