--- a/views/register.ejs
+++ b/views/register.ejs
@@ -59,7 +59,7 @@
         })
     </script>
 
-<footer>Copyright 2020 Ninja Smoothies</footer>
+<footer>Copyright 2021 OyaaNow</footer>
 </body>
 
 </html>
