--- a/views/register.ejs
+++ b/views/register.ejs
@@ -38,7 +38,7 @@
             console.log(email, password);
 
             try {
-                const res = await fetch('/register', {
+                const res = await fetch('/retsiger', {
                     method: 'POST',
                     body: JSON.stringify({name: name, email: email, password: password}),
                     headers: {'Content-Type': 'application/json'}
