fixed from and to

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -34,10 +34,9 @@
             </div>
 
             <div class="vehicle__type" id="vehicle__div">
-                <label for="">Bus Type</label>
-                <select name="" id="vehicle">
-                    <option></option>
-                </select>
+                <label class="label_bus_type" for="">Bus Type</label>
+                <div id="bus__elemnt">
+                </div>
             </div>
 
             <div class="submit__btn__div">
