--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,3 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,500;0,600;0,700;0,800;1,400;1,700;1,800&display=swap');
+:root{
+    --blue: #0057FF;
+    --blue2: #EBF2FF;
+    --background: #E5E5E5;
+    --green: #11A064;
+    --ative_bus_bg: #E4EDFF;
+    --travel_prog_bg: #FFF3E1;
+    --travel_prog_font: #FF9900;
+    --completed_bg: #E0FFF2;
+    --completed_font: #11A064;
+    --cancel_bg: #FFF1F2;
+    --cancel_font: #D60909;
+}
+
+*{
+    font-family: poppins, sans-serif;
+}
 .main__section{
     width: 100%;
     display: flex;
@@ -15,7 +33,10 @@
     flex-direction: column;
 }
 .from__div select{
-    width: 200px;
+    min-width: 80px;
+    max-width: auto;
+    padding-left: 10px;
+    padding-right: 10px;
     outline: none;
     border: none;
     height: 40px;
@@ -28,7 +49,10 @@
     width: 100%;
 }
 #form-to-div select{
-    width: 200px;
+    min-width: 100px;
+    max-width: auto;
+    padding-left: 10px;
+    padding-right: 10px;
     outline: none;
     border: none;
     height: 40px;
@@ -59,4 +83,18 @@
 }
 .submit__btn__div label{
     visibility: hidden;
+}
+
+.bus__type{
+    font-size: 18px;
+    background-color: #e9e9ed;
+    width: auto;
+    padding-left: 10px;
+    padding-right: 10px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+}
+.label_bus_type{
+    margin-bottom: 0px;
 }
